AntlrCSharp/AQLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:/Users/thoma/Documents/VSCODE/AQL/AntlrCSharp/AQL.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class AQLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, ID=59, BOOL=60, 
		INT=61, DOUBLE=62, STRING=63, WS=64;
	public const int
		RULE_prog = 0, RULE_importList = 1, RULE_def = 2, RULE_network = 3, RULE_idList = 4, 
		RULE_qualifiedIdList = 5, RULE_instances = 6, RULE_instancesList = 7, 
		RULE_instance = 8, RULE_routes = 9, RULE_routesB = 10, RULE_routeIDList = 11, 
		RULE_routeIDListB = 12, RULE_metrics = 13, RULE_metricList = 14, RULE_metricListA = 15, 
		RULE_metric = 16, RULE_serviceCount = 17, RULE_paramList = 18, RULE_paramListA = 19, 
		RULE_assign = 20, RULE_stmt = 21, RULE_stmtA = 22, RULE_else1 = 23, RULE_else2 = 24, 
		RULE_elseIf = 25, RULE_expr = 26, RULE_value = 27, RULE_actualParamList = 28, 
		RULE_actualParamListA = 29, RULE_funcCall = 30, RULE_type = 31, RULE_array = 32, 
		RULE_arrayValue = 33, RULE_qualifiedID = 34;
	public static readonly string[] ruleNames = {
		"prog", "importList", "def", "network", "idList", "qualifiedIdList", "instances", 
		"instancesList", "instance", "routes", "routesB", "routeIDList", "routeIDListB", 
		"metrics", "metricList", "metricListA", "metric", "serviceCount", "paramList", 
		"paramListA", "assign", "stmt", "stmtA", "else1", "else2", "elseIf", "expr", 
		"value", "actualParamList", "actualParamListA", "funcCall", "type", "array", 
		"arrayValue", "qualifiedID"
	};

	private static readonly string[] _LiteralNames = {
		null, "'import'", "'const'", "'function'", "'('", "')'", "'{'", "'}'", 
		"'simulate'", "'run:'", "','", "'until:'", "'times:'", "'queue'", "'service:'", 
		"'capacity:'", "'network'", "'inputs:'", "';'", "'outputs:'", "'routes:'", 
		"'instances:'", "':'", "'->'", "'['", "']'", "'metrics:'", "'mrt'", "'vrt'", 
		"'util'", "'throughput'", "'num'", "'avgNum'", "'number_of_services:'", 
		"'='", "'while'", "'do'", "'if'", "'return'", "'else {'", "'else if'", 
		"'!'", "'-'", "'*'", "'/'", "'+'", "'<'", "'<='", "'>'", "'>='", "'=='", 
		"'!='", "'&&'", "'||'", "'bool'", "'int'", "'double'", "'string'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "ID", 
		"BOOL", "INT", "DOUBLE", "STRING", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AQL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static AQLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public AQLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AQLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ImportListContext importList() {
			return GetRuleContext<ImportListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefContext[] def() {
			return GetRuleContexts<DefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefContext def(int i) {
			return GetRuleContext<DefContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAQLVisitor<TResult> typedVisitor = visitor as IAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			importList();
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 73996L) != 0)) {
				{
				{
				State = 71;
				def();
				}
				}
				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(AQLParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ImportListContext importList() {
			return GetRuleContext<ImportListContext>(0);
		}
		public ImportListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAQLVisitor<TResult> typedVisitor = visitor as IAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportListContext importList() {
		ImportListContext _localctx = new ImportListContext(Context, State);
		EnterRule(_localctx, 2, RULE_importList);
		try {
			State = 81;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 77;
				Match(T__0);
				State = 78;
				Match(STRING);
				State = 79;
				importList();
				}
				break;
			case Eof:
			case T__1:
			case T__2:
			case T__7:
			case T__12:
			case T__15:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignContext assign() {
			return GetRuleContext<AssignContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AQLParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParamListContext paramList() {
			return GetRuleContext<ParamListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext stmt() {
			return GetRuleContext<StmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NetworkContext network() {
			return GetRuleContext<NetworkContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIDContext qualifiedID() {
			return GetRuleContext<QualifiedIDContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public DefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAQLVisitor<TResult> typedVisitor = visitor as IAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefContext def() {
		DefContext _localctx = new DefContext(Context, State);
		EnterRule(_localctx, 4, RULE_def);
		try {
			State = 110;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 83;
				Match(T__1);
				State = 84;
				type();
				State = 85;
				assign();
				}
				break;
			case T__2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 87;
				Match(T__2);
				State = 88;
				type();
				State = 89;
				Match(ID);
				State = 90;
				Match(T__3);
				State = 91;
				paramList();
				State = 92;
				Match(T__4);
				State = 93;
				Match(T__5);
				State = 94;
				stmt();
				State = 95;
				Match(T__6);
				}
				break;
			case T__12:
			case T__15:
				EnterOuterAlt(_localctx, 3);
				{
				State = 97;
				network();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 4);
				{
				State = 98;
				Match(T__7);
				State = 99;
				Match(T__5);
				State = 100;
				Match(T__8);
				State = 101;
				qualifiedID();
				State = 102;
				Match(T__9);
				State = 103;
				Match(T__10);
				State = 104;
				expr(0);
				State = 105;
				Match(T__9);
				State = 106;
				Match(T__11);
				State = 107;
				expr(0);
				State = 108;
				Match(T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NetworkContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AQLParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ServiceCountContext serviceCount() {
			return GetRuleContext<ServiceCountContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext[] value() {
			return GetRuleContexts<ValueContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value(int i) {
			return GetRuleContext<ValueContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MetricsContext metrics() {
			return GetRuleContext<MetricsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdListContext[] idList() {
			return GetRuleContexts<IdListContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdListContext idList(int i) {
			return GetRuleContext<IdListContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RoutesContext routes() {
			return GetRuleContext<RoutesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstancesContext instances() {
			return GetRuleContext<InstancesContext>(0);
		}
		public NetworkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_network; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAQLVisitor<TResult> typedVisitor = visitor as IAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNetwork(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NetworkContext network() {
		NetworkContext _localctx = new NetworkContext(Context, State);
		EnterRule(_localctx, 6, RULE_network);
		int _la;
		try {
			State = 153;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__12:
				EnterOuterAlt(_localctx, 1);
				{
				State = 112;
				Match(T__12);
				State = 113;
				Match(ID);
				State = 114;
				Match(T__5);
				State = 115;
				serviceCount();
				State = 116;
				Match(T__13);
				State = 117;
				value();
				State = 118;
				Match(T__9);
				State = 119;
				Match(T__14);
				State = 120;
				value();
				State = 123;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__9) {
					{
					State = 121;
					Match(T__9);
					State = 122;
					metrics();
					}
				}

				State = 125;
				Match(T__6);
				}
				break;
			case T__15:
				EnterOuterAlt(_localctx, 2);
				{
				State = 127;
				Match(T__15);
				State = 128;
				Match(ID);
				State = 129;
				Match(T__5);
				State = 130;
				Match(T__16);
				State = 131;
				idList();
				State = 132;
				Match(T__17);
				State = 133;
				Match(T__18);
				State = 134;
				idList();
				State = 137;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
				case 1:
					{
					State = 135;
					Match(T__17);
					State = 136;
					instances();
					}
					break;
				}
				State = 139;
				Match(T__17);
				State = 140;
				Match(T__19);
				State = 141;
				Match(T__5);
				State = 142;
				routes();
				State = 143;
				Match(T__6);
				State = 146;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
				case 1:
					{
					State = 144;
					Match(T__17);
					State = 145;
					metrics();
					}
					break;
				}
				State = 149;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__17) {
					{
					State = 148;
					Match(T__17);
					}
				}

				State = 151;
				Match(T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(AQLParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(AQLParser.ID, i);
		}
		public IdListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_idList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAQLVisitor<TResult> typedVisitor = visitor as IAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdListContext idList() {
		IdListContext _localctx = new IdListContext(Context, State);
		EnterRule(_localctx, 8, RULE_idList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155;
			Match(ID);
			State = 160;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__9) {
				{
				{
				State = 156;
				Match(T__9);
				State = 157;
				Match(ID);
				}
				}
				State = 162;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QualifiedIdListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIDContext[] qualifiedID() {
			return GetRuleContexts<QualifiedIDContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIDContext qualifiedID(int i) {
			return GetRuleContext<QualifiedIDContext>(i);
		}
		public QualifiedIdListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualifiedIdList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAQLVisitor<TResult> typedVisitor = visitor as IAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQualifiedIdList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QualifiedIdListContext qualifiedIdList() {
		QualifiedIdListContext _localctx = new QualifiedIdListContext(Context, State);
		EnterRule(_localctx, 10, RULE_qualifiedIdList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 163;
			qualifiedID();
			State = 168;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__9) {
				{
				{
				State = 164;
				Match(T__9);
				State = 165;
				qualifiedID();
				}
				}
				State = 170;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstancesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public InstancesListContext instancesList() {
			return GetRuleContext<InstancesListContext>(0);
		}
		public InstancesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instances; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAQLVisitor<TResult> typedVisitor = visitor as IAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstances(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstancesContext instances() {
		InstancesContext _localctx = new InstancesContext(Context, State);
		EnterRule(_localctx, 12, RULE_instances);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 171;
			Match(T__20);
			State = 172;
			Match(T__5);
			State = 173;
			instancesList();
			State = 174;
			Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstancesListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public InstanceContext[] instance() {
			return GetRuleContexts<InstanceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstanceContext instance(int i) {
			return GetRuleContext<InstanceContext>(i);
		}
		public InstancesListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instancesList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAQLVisitor<TResult> typedVisitor = visitor as IAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstancesList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstancesListContext instancesList() {
		InstancesListContext _localctx = new InstancesListContext(Context, State);
		EnterRule(_localctx, 14, RULE_instancesList);
		int _la;
		try {
			int _alt;
			State = 188;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 176;
				instance();
				State = 181;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,10,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 177;
						Match(T__17);
						State = 178;
						instance();
						}
						} 
					}
					State = 183;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,10,Context);
				}
				State = 185;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__17) {
					{
					State = 184;
					Match(T__17);
					}
				}

				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstanceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIDContext qualifiedID() {
			return GetRuleContext<QualifiedIDContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdListContext idList() {
			return GetRuleContext<IdListContext>(0);
		}
		public InstanceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instance; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAQLVisitor<TResult> typedVisitor = visitor as IAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstance(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstanceContext instance() {
		InstanceContext _localctx = new InstanceContext(Context, State);
		EnterRule(_localctx, 16, RULE_instance);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 190;
			qualifiedID();
			State = 191;
			Match(T__21);
			State = 192;
			idList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RoutesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIDContext[] qualifiedID() {
			return GetRuleContexts<QualifiedIDContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIDContext qualifiedID(int i) {
			return GetRuleContext<QualifiedIDContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RoutesBContext routesB() {
			return GetRuleContext<RoutesBContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RouteIDListContext routeIDList() {
			return GetRuleContext<RouteIDListContext>(0);
		}
		public RoutesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_routes; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAQLVisitor<TResult> typedVisitor = visitor as IAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoutes(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RoutesContext routes() {
		RoutesContext _localctx = new RoutesContext(Context, State);
		EnterRule(_localctx, 18, RULE_routes);
		try {
			State = 206;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,13,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 194;
				qualifiedID();
				State = 195;
				Match(T__22);
				State = 196;
				qualifiedID();
				State = 197;
				routesB();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 199;
				qualifiedID();
				State = 200;
				Match(T__22);
				State = 201;
				Match(T__23);
				State = 202;
				routeIDList();
				State = 203;
				Match(T__24);
				State = 204;
				routesB();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RoutesBContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIDContext[] qualifiedID() {
			return GetRuleContexts<QualifiedIDContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIDContext qualifiedID(int i) {
			return GetRuleContext<QualifiedIDContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RoutesBContext routesB() {
			return GetRuleContext<RoutesBContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RouteIDListContext routeIDList() {
			return GetRuleContext<RouteIDListContext>(0);
		}
		public RoutesBContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_routesB; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAQLVisitor<TResult> typedVisitor = visitor as IAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoutesB(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RoutesBContext routesB() {
		RoutesBContext _localctx = new RoutesBContext(Context, State);
		EnterRule(_localctx, 20, RULE_routesB);
		try {
			State = 223;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,14,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 208;
				Match(T__9);
				State = 209;
				qualifiedID();
				State = 210;
				Match(T__22);
				State = 211;
				qualifiedID();
				State = 212;
				routesB();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 214;
				Match(T__9);
				State = 215;
				qualifiedID();
				State = 216;
				Match(T__22);
				State = 217;
				Match(T__23);
				State = 218;
				routeIDList();
				State = 219;
				Match(T__24);
				State = 220;
				routesB();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
